Fix steam engine advancements and tooltip translations

--- a/src/main/resources/assets/oritech/lang/en_us.json
+++ b/src/main/resources/assets/oritech/lang/en_us.json
@@ -47,6 +47,8 @@
   "advancements.oritech.ai.description": "Get a Super AI Chip. Skynet who? It's not just smart, it's super smart!",
   "advancements.oritech.unholy": "Unholy Knowledge",
   "advancements.oritech.unholy.description": "Acquire an unholy intelligence. Knowledge is power, but this is something else!",
+  "advancements.oritech.steam_engine": "Steam Dreams",
+  "advancements.oritech.steam_engine.description": "Harness the power of steam! You've turned water into energy—now let's hope it doesn't turn into a hot mess!",
   "button.oritech.input_mode_fill_left_to_right": "Default",
   "button.oritech.input_mode_fill_evenly": "Fill Evenly",
   "button.oritech.input_mode_fill_matching_recipe": "Match Recipe",
@@ -190,7 +192,7 @@
   "tooltip.oritech.machine_efficiency": "Energy Efficiency",
   "title.oritech.machine_energy_production": "↗ %d RF/t ",
   "tooltip.oritech.steam_energy_production": "Total production (includes chained generators)",
-  "title.oritech.steam_production": "\uD83D\uDEDE %s su/t",
+  "title.oritech.steam_production": "↗ %s RF/t",
   "tooltip.oritech.steam_production": "Amount of steam droplets produced per tick. Any excess will be lost when the storage is full.",
   "title.oritech.steam_consumption": "\uD83D\uDEDE %s su/t",
   "tooltip.oritech.steam_consumption": "Total steam consumption in storage units (droplets) per tick (includes chained generators)",
