Add icons, add area render placeholders

--- a/docs/getting_started/alloys.mdx
+++ b/docs/getting_started/alloys.mdx
@@ -1,5 +1,6 @@
 ---
 title: Making Steel (and other Alloys)
+icon: oritech:steel_ingot
 ---
 
 You can make [steel](../resources/steel), [electrum](../resources/electrum), and [adamant](../resources/adamant) in a crafting table,
