--- a/docs/getting_started/assembling_components.mdx
+++ b/docs/getting_started/assembling_components.mdx
@@ -1,6 +1,6 @@
 ---
 title: Assembling Components
-icon: oritech:steel_ingot
+icon: oritech:advanced_battery
 ---
 
 Build an [assembler](../processing/assembler).
