--- a/docs/interaction/deepdrill.mdx
+++ b/docs/interaction/deepdrill.mdx
@@ -3,7 +3,9 @@ title: Bedrock Extractor
 icon: oritech:deep_drill_block
 ---
 
-<ModAsset location="oritech:deep_drill" />
+<center>
+<ModAsset location="oritech:area/deep_drill" width={512} />
+</center>
 
 The bedrock extractor can mine ores from below bedrock at locations where [ore resource nodes](../resources/resource_nodes) are found. This [multiblock](../processing/multiblocks) machine can only operate when placed on resource nodes and must be powered using [enderic lasers](../interaction/enderic_laser).
 
