--- a/docs/interaction/machine_frames.mdx
+++ b/docs/interaction/machine_frames.mdx
@@ -2,6 +2,9 @@
 title: Machine Frames
 icon: oritech:machine_frame_block
 ---
+<center>
+<ModAsset location="oritech:area/machine_frame" width={512} />
+</center>
 
 The *[block placer](../interaction/block_placer)*, *[block destroyer](../interaction/block_destroyer)*, and *[fertilizer](../interaction/fertilizer)* all operate on a gantry built with machine frames. The machine frame designates the area in which the machines operate. It must be rectangular and empty inside.
 
@@ -11,6 +14,4 @@ Any number of machines can operate on the same machine frame. To achieve this, s
 
 All machines that operate on machine frames can use most addons.
 
-The speed addon increases both the movement and operation speed.
-
-<ModAsset location="oritech:machine_speed_addon" />
+The speed addon increases both the movement and operation speed of machines working in the frame.
