--- a/docs/interaction/tree_cutter.mdx
+++ b/docs/interaction/tree_cutter.mdx
@@ -3,7 +3,9 @@ title: Tree Cutter
 icon: oritech:treefeller_block
 ---
 
-<ModAsset location="oritech:treefeller_block" />
+<center>
+<ModAsset location="oritech:area/treefeller_block" width={512} />
+</center>
 
 When powered by RF, the tree cutter will cut down an entire tree, including the leaves. The tree cutter will only cut logs up to 7 blocks away, so it may not reach the top of large trees.
 
