--- a/docs/logistics/drone_port.mdx
+++ b/docs/logistics/drone_port.mdx
@@ -3,7 +3,9 @@ title: Drone Port
 icon: oritech:drone_port_block
 ---
 
-<ModAsset location="oritech:drone_port_block" />
+<center>
+<ModAsset location="oritech:drone_port_block" width={256} />
+</center>
 
 The drone port allows you to transport items across vast distances using flying drones. It requires a drone port at both the takeoff and landing positions to be built and powered.
 
