--- a/docs/logistics/energy.mdx
+++ b/docs/logistics/energy.mdx
@@ -14,8 +14,12 @@ The cables themselves store up to **10k RF** at each machine connection if they 
 To buffer and store energy, you can use energy storage blocks. They're available in two sizes and can be massively expanded using addons.
 Energy storage blocks accept energy from all sides through a 🟢 *green port* and can only output through the single 🔴 *red port*. A redstone signal will disable all energy output.
 
-<ModAsset location="oritech:small_storage_block" />
+<center>
+<ModAsset location="oritech:small_storage_block" width={256} />
+</center>
 
 Energy can also be transferred wireless using an enderic laser. See [enderic laser](../interaction/enderic_laser).
 
-<ModAsset location="oritech:enderic_laser" />
+<center>
+<ModAsset location="oritech:area/laser_transfer_area" width={512} />
+</center>
