--- a/docs/logistics/fluid_transport.mdx
+++ b/docs/logistics/fluid_transport.mdx
@@ -7,4 +7,6 @@ Fluid pipes behave similarly to item pipes. However, they also have a small inte
 
 To store fluids, you can use a fluid tank. The small fluid tank stores up to *256* buckets of fluid. When broken, the small tank retains all of its content in the item NBT. A comparator output will reflect the tank's fill status. Stacked tanks will automatically let the fluid flow downward.
 
-<ModAsset location="oritech:small_tank_block" />
+<center>
+<ModAsset location="oritech:small_tank_block" width={256} />
+</center>
