--- a/docs/interaction/block_placer.mdx
+++ b/docs/interaction/block_placer.mdx
@@ -3,7 +3,9 @@ title: Block Placer
 icon: oritech:placer_block
 ---
 
-<ModAsset location="oritech:placer_block" />
+<center>
+<ModAsset location="oritech:area/placer_block" width={512} />
+</center>
 
 The block placer places blocks from its inventory onto the layer below the [machine frame](../interaction/machine_frames). It can also be used to plant seeds in farmland or saplings.
 
