--- a/docs/interaction/enderic_laser.mdx
+++ b/docs/interaction/enderic_laser.mdx
@@ -3,7 +3,9 @@ title: Enderic Laser
 icon: oritech:laser_arm_block
 ---
 
-<ModAsset location="oritech:enderic_laser" />
+<center>
+<ModAsset location="oritech:area/enderic_laser" width={512} />
+</center>
 
 The enderic laser utilizes vast amounts of energy to fire a laser beam in a specific direction. In most cases, this results in the block being destroyed. The dropped blocks are then placed in the inventory. Any blocks that don't fit into the inventory will be lost, so you may want to use an [item pipe](../logistics/item_transport) to continue collecting items.
 
@@ -23,7 +25,9 @@ The maximum range is 64.
 
 The immense energy from the enderic laser causes grown amethyst clusters to transform into fluxite when destroyed.
 
-<ModAsset location="minecraft:amethyst_cluster" />
+<center>
+<ModAsset location="oritech:area/laser_fluxite" width={512} />
+</center>
 
 The laser also accelerates amethyst growth when aimed at the budding amethyst itself.
 
