--- a/docs/interaction/pump.mdx
+++ b/docs/interaction/pump.mdx
@@ -3,7 +3,9 @@ title: Pump
 icon: oritech:pump_block
 ---
 
-<ModAsset location="oritech:pump_block" />
+<center>
+<ModAsset location="oritech:area/pump_block" width={512} />
+</center>
 
 The pump is used to extract liquids from below. When placed, it extends a trunk downward until it encounters a liquid or obstruction. Once a liquid is found, it scans the liquid body and stores all positions to pump from.
 
