--- a/docs/logistics/item_transport.mdx
+++ b/docs/logistics/item_transport.mdx
@@ -17,7 +17,9 @@ Pipes will always extract from the first non-empty slot in an inventory. If the 
 
 **Item Filters**
 
-<ModAsset location="oritech:item_filter_block" />
+<center>
+<ModAsset location="oritech:item_filter_block" width={256} />
+</center>
 
 To filter which items go where, you can use item filters. They are blocks you can place next to the target inventory. They have five input sides and always output to the side they are facing. They only accept items that match the filter set via the UI and automatically output them to the target inventory.
 
