Add additional pictures to docs

--- a/docs/getting_started/gather_resources.mdx
+++ b/docs/getting_started/gather_resources.mdx
@@ -12,4 +12,6 @@ but is also abundant in the end dimension.
 
 Gold, redstone, and a couple of diamonds will also be very useful soon, so make sure to collect them as well.
 
-![Ore Boulder](oritech:textures/book/ore_boulder.png)
+<center>
+<ModAsset location="oritech:area/ore_boulder" width={512} />
+</center>
