--- a/docs/getting_started/lasers.mdx
+++ b/docs/getting_started/lasers.mdx
@@ -11,4 +11,6 @@ With your newly crafted enderic laser, a [target designator](../tools/target_des
 
 To acquire fluxite, mine amethyst clusters with the enderic laser. Use the target designator to aim the laser at an amethyst cluster. The budding amethysts will not be broken; instead, they will be energized, promoting faster growth of budding amethysts.
 
-![fluxite_mining](oritech:textures/book/laser_fluxite.png)
+<center>
+<ModAsset location="oritech:area/fluxite_mining" width={512} />
+</center>
