--- a/docs/resources/fluxite.mdx
+++ b/docs/resources/fluxite.mdx
@@ -8,4 +8,6 @@ The most effective way to obtain fluxite is by mining an amethyst cluster with a
 
 Additionally, fluxite can be found when processing [platinum](../resources/platinum) ores.
 
-<ModAsset location="oritech:laser_fluxite" />
+<center>
+<ModAsset location="oritech:area/fluxite_mining" width={800} />
+</center>
