--- a/docs/resources/ore_boulder.mdx
+++ b/docs/resources/ore_boulder.mdx
@@ -3,7 +3,9 @@ title: Ore Boulder
 icon: oritech:deepslate_nickel_ore
 ---
 
-<ModAsset location="oritech:textures/book/ore_boulder" />
+<center>
+<ModAsset location="oritech:area/ore_boulder" width={512} />
+</center>
 
 Ore boulders are found on the surface of the world. They are composed of deepslate and are rich in various ores.
 
