--- a/docs/processing/addons.mdx
+++ b/docs/processing/addons.mdx
@@ -8,7 +8,9 @@ Addons can perform a variety of functions, such as increasing speed, improving e
 
 Machines can only accept addons at specific positions. To view these, either check the "addons" UI page or look for these markers on the machine:
 
-<ModAsset location="oritech:addon_marker" />
+<center>
+<ModAsset location="oritech:area/addon_marker" width={300} />
+</center>
 
 Addons are activated when the machine is right-clicked. To indicate activation, the pink parts of an addon turn blue when in use.
 To extend the available number of addon slots, you can use machine extenders. These specific addons don't directly influence the machine but allow
@@ -21,8 +23,12 @@ The core quality never directly counts the number of machine extenders you have 
 an addon has to pass to be connected to the machine. If this number is greater than the core quality, the addon will not be connected.
 See this image for a small demonstration:
 
-<ModAsset location="oritech:extenders" />
+<center>
+<ModAsset location="oritech:area/extenders" width={700} />
+</center>
 
 As mentioned before, only the number of extenders between a machine and an addon is counted. This means you can branch the extenders, and everything will work:
 
-<ModAsset location="oritech:addon_branching" />
+<center>
+<ModAsset location="oritech:area/addon_branching" width={700} />
+</center>
