--- a/docs/processing/atomic_forge.mdx
+++ b/docs/processing/atomic_forge.mdx
@@ -3,7 +3,9 @@ title: Atomic Forge
 icon: oritech:atomic_forge_block
 ---
 
-<ModAsset location="oritech:atomic_forge" />
+<center>
+<ModAsset location="oritech:area/enderic_laser_energy" width={512} />
+</center>
 
 The atomic forge is a powerful machine capable of creating advanced computer chips, reinforcing deepslate, and even duplicating ores.
 
