--- a/docs/processing/pulverizer.mdx
+++ b/docs/processing/pulverizer.mdx
@@ -3,6 +3,5 @@ title: Pulverizer
 icon: oritech:pulverizer_block
 ---
 
-<ModAsset location="oritech:pulverizer" />
-
-The pulverizer is a slow and simple block that pulverizes ores and biomass. It is available before the [fragment forge](../processing/fragment_forge), but even after you build a fragment forge, you may still want to continue using a pulverizer to grind biomass or coal dust.
+The pulverizer is a slow and simple block that pulverizes ores and biomass. It is available before the [fragment forge](../processing/fragment_forge),
+but even after you build a fragment forge, you may still want to continue using a pulverizer to grind biomass or coal dust.
