--- a/docs/processing/steam_engine.mdx
+++ b/docs/processing/steam_engine.mdx
@@ -3,7 +3,9 @@ title: Steam Power
 icon: oritech:steam_boiler_addon
 ---
 
-<ModAsset location="oritech:steam_boiler_addon" />
+<center>
+<ModAsset location="oritech:area/steam_power" width={1000} />
+</center>
 
 All generators (except the basic generator) can be upgraded to produce steam by adding a steam boiler addon.
 When added, the machine will no longer directly produce RF. Instead, it will produce steam at a rate of 2:1.
@@ -11,6 +13,11 @@ To produce steam, water will be consumed. Water and steam can be pumped in and o
 
 To utilize the steam, a steam engine can be used to produce RF from it. It takes steam as input and outputs water.
 However, during the process, around 20% of the water will be lost, so a steady supply of water is needed for the generators.
+
+<Callout variant="info">
+    Steam engines will not work if their water or energy storage is completely full. Always ensure that the water can go somewhere. With some tanks, comparators and redstone
+    you can probably build a self-sustaining loop.
+</Callout>
 
 Multiple steam engines can be chained together. They'll share the energy storage, water,
 and steam tank from the first engine in line, working cooperatively. A steam engine's speed varies based on the stored steam.
