--- a/docs/resources/crude_oil.mdx
+++ b/docs/resources/crude_oil.mdx
@@ -3,7 +3,9 @@ title: Crude Oil
 icon: oritech:oil_bucket
 ---
 
-<ModAsset location="oritech:textures/book/oil_geyser" />
+<center>
+<ModAsset location="oritech:area/oil_well" width={700} />
+</center>
 
 Pockets of crude oil can be found in various underground locations. They are also common near the surface in desert biomes, where they can be seen gushing from the ground.
 
