--- a/docs/resources/resource_node.mdx
+++ b/docs/resources/resource_node.mdx
@@ -3,7 +3,9 @@ title: Resource Node
 icon: oritech:resource_node_platinum
 ---
 
-<ModAsset location="oritech:textures/book/resource_node" />
+<center>
+<ModAsset location="oritech:area/resource_node" width={1000} />
+</center>
 
 Resource nodes are found throughout the world, appearing in clusters just above the bedrock layer.
 They contain all types of overworld ores and are typically covered by a small pocket of [crude oil](../resources/crude_oil).
