--- a/docs/tools/exo_armor.mdx
+++ b/docs/tools/exo_armor.mdx
@@ -3,10 +3,9 @@ title: Exo Armor
 icon: oritech:exo_chestplate
 ---
 
-<ModAsset location="oritech:exo_helmet" />
-<ModAsset location="oritech:exo_chestplate" />
-<ModAsset location="oritech:exo_leggings" />
-<ModAsset location="oritech:exo_boots" />
+<center>
+<ModAsset location="oritech:area/exo_armor" width={512} />
+</center>
 
 The exo armor is a specialized suit designed to assist you on your adventures. Each piece offers unique benefits:
 
