Add missing recipes to docs, add alloy material descriptions

--- a/docs/getting_started/first_generator.mdx
+++ b/docs/getting_started/first_generator.mdx
@@ -4,8 +4,21 @@ icon: oritech:basic_generator_block
 ---
 
 Build a [basic generator](../processing/generators).
-
-TODO CRAFTING Basicgen
+<CraftingRecipe
+    slots={[
+        'oritech:nickel_ingot',
+        'oritech:nickel_ingot',
+        'oritech:nickel_ingot',
+        'oritech:nickel_ingot',
+        'minecraft:copper_ingot',
+        'oritech:nickel_ingot',
+        'oritech:magnetic_coil',
+        'minecraft:furnace',
+        'oritech:magnetic_coil'
+    ]}
+    result="oritech:basic_generator_block"
+    count={1}
+/>
 
 This won't generate a lot of power, but it's sufficient to get you started.
 
