--- a/docs/resources/steel.mdx
+++ b/docs/resources/steel.mdx
@@ -7,6 +7,20 @@ Steel is a fundamental alloy used to create wires, coils, motors, and plating, a
 
 Steel can be created in a crafting grid:
 
-TODO CRAFTING steel
+<CraftingRecipe
+    slots={[
+        'iron_ingot',
+        'iron_ingot',
+        '',
+        'coal',
+        'coal',
+        '',
+        '',
+        '',
+        ''
+    ]}
+    result="oritech:steel_ingot"
+    count={1}
+/>
 
 The [foundry](../processing/foundry) can produce more steel using less iron and coal.
