--- a/docs/resources/biosteel.mdx
+++ b/docs/resources/biosteel.mdx
@@ -5,4 +5,5 @@ icon: oritech:biosteel_ingot
 
 Biosteel is an alloy of [steel](../resources/steel) and raw biopolymer, which can only be produced in a [foundry](../processing/foundry).
 
-This versatile alloy can be used in many applications where steel is accepted. Additionally, it is essential for crafting [bio generators](../processing/generators) and [machine speed addons](../processing/addons).
+This versatile alloy can be used in many applications where steel is accepted.
+Additionally, it is essential for crafting [bio generators](../processing/generators) and [machine speed addons](../processing/addons).
