--- a/docs/resources/duratium.mdx
+++ b/docs/resources/duratium.mdx
@@ -7,5 +7,5 @@ Duratium is an alloy composed of [platinum](../resources/platinum) and netherite
 
 It is known for its high durability and heat resistance.
 
-This powerful alloy is utilized in the construction of the [atomic forge](../processing/atomic_forge), [bedrock extractor](../interaction/bedrock_extractor),
+This powerful alloy is utilized in the construction of the [atomic forge](../processing/atomic_forge), [bedrock extractor](../interaction/deepdrill),
 and the ultra (tier 6) machine core.
