--- a/docs/.translated/fr_fr/interaction/deepdrill.mdx
+++ b/docs/.translated/fr_fr/interaction/deepdrill.mdx
@@ -4,7 +4,7 @@ icon: oritech:deep_drill_block
 ---
 
 <center>
-<ModAsset location="oritech:area/deep_drill" width={512} />
+<ModAsset location="oritech:area/bedrock_extraction" width={800} />
 </center>
 
 L'extracteur de bedrock peut extraire des minerais sous la bedrock dans les zones où se trouvent des [gisement de ressources](../resources/resource_node). Cette machine [multi-bloc](../processing/multiblocks) ne peut fonctionner que lorsqu'elle est placée sur des gisement de ressources et doit être alimentée avec des [lasers enderiques](../interaction/enderic_laser).
