New Crowdin updates (#159)

--- a/common/src/main/resources/assets/oritech/lang/de_de.json
+++ b/common/src/main/resources/assets/oritech/lang/de_de.json
@@ -47,6 +47,8 @@
   "advancements.oritech.ai.description": "Get a Super AI Chip. Skynet who? It's not just smart, it's super smart!",
   "advancements.oritech.unholy": "Unholy Knowledge",
   "advancements.oritech.unholy.description": "Acquire an unholy intelligence. Knowledge is power, but this is something else!",
+  "advancements.oritech.steam_engine": "Steam Dreams",
+  "advancements.oritech.steam_engine.description": "Nutze die Kraft des Dampfes! Du hast Wasser in Energie verwandelt – jetzt hoffen wir, dass es nicht zu einem großen Chaos wird!",
   "button.oritech.input_mode_fill_left_to_right": "Default",
   "button.oritech.input_mode_fill_evenly": "Fill Evenly",
   "button.oritech.input_mode_fill_matching_recipe": "Match Recipe",
@@ -85,6 +87,7 @@
   "tooltip.oritech.soul_crop": "Grown on soul soil. Contains a soul.",
   "tooltip.oritech.superconductor": "Cannot connect to normal energy pipes.",
   "tooltip.oritech.jetpack_usage": "Needs electricity or turbofuel to fly.",
+  "tooltip.oritech.jetpack_usage2": "Is faster with turbofuel.",
   "tooltip.oritech.charger": "Used to charge and fill equipment.",
   "tooltip.oritech.addon_speed_desc": "Operation Speed ",
   "tooltip.oritech.addon_efficiency_desc": "Energy Efficiency ",
@@ -189,7 +192,7 @@
   "tooltip.oritech.machine_efficiency": "Energy Efficiency",
   "title.oritech.machine_energy_production": "↗ %d RF/t ",
   "tooltip.oritech.steam_energy_production": "Total production (includes chained generators)",
-  "title.oritech.steam_production": "🛞 %s su/t",
+  "title.oritech.steam_production": "↗ %s RF/t",
   "tooltip.oritech.steam_production": "Amount of steam droplets produced per tick. Any excess will be lost when the storage is full.",
   "title.oritech.steam_consumption": "🛞 %s su/t",
   "tooltip.oritech.steam_consumption": "Total steam consumption in storage units (droplets) per tick (includes chained generators)",
@@ -330,9 +333,9 @@
   "block.oritech.machine_inventory_proxy_addon": "Machine Inventory Proxy Addon",
   "block.oritech.machine_redstone_addon": "Redstone Control Unit Addon",
   "block.oritech.machine_extender": "Machine Extender",
-  "block.oritech.oil_fluid_block": "Crude Oil",
-  "block.oritech.fuel_fluid_block": "Turbofuel",
-  "block.oritech.steam_fluid_block": "Steam",
+  "block.oritech.still_oil_block": "Crude Oil",
+  "block.oritech.still_fuel_block": "Turbofuel",
+  "block.oritech.still_steam_block": "Steam",
   "block.oritech.nickel_ore": "Nickel Ore",
   "block.oritech.deepslate_nickel_ore": "Deepslate Nickel Ore",
   "block.oritech.endstone_platinum_ore": "Endstone Platinum Ore",
@@ -397,9 +400,9 @@
   "item.oritech.banana": "Banana",
   "item.oritech.weed_killer": "Weed Killer",
   "item.oritech.target_designator": "Target Designator",
-  "item.oritech.oil_bucket": "Crude Oil Bucket",
-  "item.oritech.fuel_bucket": "Turbofuel Bucket",
-  "item.oritech.steam_bucket": "Steam Bucket",
+  "item.oritech.still_oil_bucket": "Crude Oil Bucket",
+  "item.oritech.still_fuel_bucket": "Turbofuel Bucket",
+  "item.oritech.still_steam_bucket": "Steam Bucket",
   "item.oritech.nickel_ingot": "Nickel Ingot",
   "item.oritech.raw_nickel": "Raw Nickel",
   "item.oritech.nickel_clump": "Nickel Clump",
@@ -743,5 +746,9 @@
   "text.config.oritech-config.option.maxGateDist": "Maximum Particle Gate Distance",
   "text.config.oritech-config.option.endPortalRequiredSpeed": "Minimum End Portal Collision Energy",
   "text.config.oritech-config.option.netherPortalRequiredSpeed": "Minimum Nether Portal Collision Energy",
-  "text.config.oritech-config.option.blackHoleRequiredSpeed": "Minimum Black Hole Collision Energy"
+  "text.config.oritech-config.option.blackHoleRequiredSpeed": "Minimum Black Hole Collision Energy",
+  "text.config.oritech-config.section.blackHole": "Black Hole",
+  "text.config.oritech-config.option.pullTimeMultiplier": "Black Hole Pull Time Multiplier",
+  "text.config.oritech-config.option.pullRange": "Black Hole Pull Range",
+  "text.config.oritech-config.option.idleWaitTicks": "Black Hole Idle Wait Ticks"
 }
