--- a/common/src/main/resources/assets/oritech/lang/fr_fr.json
+++ b/common/src/main/resources/assets/oritech/lang/fr_fr.json
@@ -240,7 +240,7 @@
   "rei.process.oritech:steam_engine": "Utilisation de vapeur",
   "rei.process.oritech:bio_generator": "Mélange de biomasse",
   "rei.process.oritech:fuel_generator": "Combustion de carburant",
-  "rei.process.oritech:particle_collision": "Collision de particules",
+  "rei.process.oritech:particle_collision": "Combustion de carburant",
   "rei.title.oritech.cookingtime": "%ds (%d ticks)",
   "emi.category.oritech.pulverizer": "Pulvérisation",
   "emi.category.oritech.grinder": "Fragmentation",
@@ -333,9 +333,9 @@
   "block.oritech.machine_inventory_proxy_addon": "Module proxy d'inventaire de machine",
   "block.oritech.machine_redstone_addon": "Module d'unité de contrôle redstone",
   "block.oritech.machine_extender": "Block de module de machine",
-  "block.oritech.oil_fluid_block": "Pétrole brut",
-  "block.oritech.fuel_fluid_block": "Turbocarburant",
-  "block.oritech.steam_fluid_block": "Vapeur",
+  "block.oritech.still_oil_block": "Pétrole brut",
+  "block.oritech.still_fuel_block": "Turbocarburant",
+  "block.oritech.still_steam_block": "Vapeur",
   "block.oritech.nickel_ore": "Minerai de nickel",
   "block.oritech.deepslate_nickel_ore": "Minerai de nickel des abîme",
   "block.oritech.endstone_platinum_ore": "Minerai de platine de l'end",
@@ -355,7 +355,7 @@
   "block.oritech.tech_button": "Bouton industriel",
   "block.oritech.tech_lever": "Levier industriel",
   "block.oritech.tech_door": "Porte industrielle",
-  "block.oritech.tech_door_hinge": "Charnière de porte industrielle",
+  "block.oritech.tech_door_hinge": "Porte industrielle",
   "block.oritech.metal_beam_block": "Poutre de support industrielle",
   "block.oritech.machine_plating_block": "Cuivre renforcé",
   "block.oritech.machine_plating_slab": "Dalle de cuivre renforcé",
@@ -364,11 +364,11 @@
   "block.oritech.iron_plating_block": "Fer renforcé",
   "block.oritech.iron_plating_slab": "Dalle de fer renforcé",
   "block.oritech.iron_plating_stairs": "Escalier de fer renforcé",
-  "block.oritech.iron_plating_pressure_plate": "Plaque de pression en fer renforcé",
+  "block.oritech.iron_plating_pressure_plate": "Plaque de pression en cuivre renforcé",
   "block.oritech.nickel_plating_block": "Nickel renforcé",
   "block.oritech.nickel_plating_slab": "Dalle de nickel renforcé",
   "block.oritech.nickel_plating_stairs": "Escalier de nickel renforcé",
-  "block.oritech.nickel_plating_pressure_plate": "Plaque de pression en nickel renforcé",
+  "block.oritech.nickel_plating_pressure_plate": "Plaque de pression en cuivre renforcé",
   "block.oritech.industrial_glass_block": "Verre industriel",
   "block.oritech.capacitor_addon_extender": "Module de banque d'énergie",
   "block.oritech.treefeller_block": "Coupe-arbres",
@@ -400,9 +400,9 @@
   "item.oritech.banana": "Banane",
   "item.oritech.weed_killer": "Herbicide",
   "item.oritech.target_designator": "Sélecteur de cible",
-  "item.oritech.oil_bucket": "Seau de pétrole brut",
-  "item.oritech.fuel_bucket": "Seau de turbocarburant",
-  "item.oritech.steam_bucket": "Seau de vapeur",
+  "item.oritech.still_oil_bucket": "Seau de pétrole brut",
+  "item.oritech.still_fuel_bucket": "Seau de turbocarburant",
+  "item.oritech.still_steam_bucket": "Seau de vapeur",
   "item.oritech.nickel_ingot": "Lingot de nickel",
   "item.oritech.raw_nickel": "Nickel brut",
   "item.oritech.nickel_clump": "Morceau de nickel",
@@ -459,7 +459,7 @@
   "item.oritech.enderic_compound": "Composé Enderique",
   "item.oritech.strange_matter": "Matière étrange",
   "item.oritech.fine_wire": "Fil fin",
-  "item.oritech.insulated_wire": "Fil fin isolé",
+  "item.oritech.insulated_wire": "Fil fin",
   "item.oritech.magnetic_coil": "Bobine magnétique",
   "item.oritech.motor": "Moteur",
   "item.oritech.basic_battery": "Batterie basique",
@@ -557,8 +557,6 @@
   "text.oritech.accelerator.ui.exited": "Particule sortie",
   "text.oritech.accelerator.ui.exited.stats": "Coordonnées %s\nDernière dist de courbe : %s\nDist min de courbe : %s",
   "text.oritech.accelerator.ui.exited.nogate": "Coordonnées %s\nAucune porte en portée\nPortée : %s",
-  "text.oritech.accelerator.ui.cookingtime": "%ds (%d ticks)",
-  "text.oritech.accelerator.ui.collisionspeed": "Énergie requise : %sJ",
   "text.config.oritech-config.title": "Paramètres Oritech",
   "text.config.oritech-config.section.machineSettings": "Machines",
   "text.config.oritech-config.category.processingMachines": "Machines de traitement",
