--- a/common/src/main/resources/assets/oritech/lang/ru_ru.json
+++ b/common/src/main/resources/assets/oritech/lang/ru_ru.json
@@ -47,6 +47,8 @@
   "advancements.oritech.ai.description": "Получить Супер AI чип. Skynet кто? Это не просто умный, это супер умный!",
   "advancements.oritech.unholy": "Дьявольское знание",
   "advancements.oritech.unholy.description": "Приобрести несвященный интеллект. Знание — это сила, но это что-то еще!",
+  "advancements.oritech.steam_engine": "Паровая мечта",
+  "advancements.oritech.steam_engine.description": "Используйте мощь пара! Превращайте воду в энергию, теперь надеемся что она не превратится в горячий беспорядок!",
   "button.oritech.input_mode_fill_left_to_right": "По умолчанию",
   "button.oritech.input_mode_fill_evenly": "Заполнить по-умолчанию",
   "button.oritech.input_mode_fill_matching_recipe": "Рецепт соответствия",
@@ -85,6 +87,7 @@
   "tooltip.oritech.soul_crop": "Росток на земле души. Содержит душу.",
   "tooltip.oritech.superconductor": "Не удается подключиться к обычным энергетическим трубам.",
   "tooltip.oritech.jetpack_usage": "Needs electricity or turbofuel to fly.",
+  "tooltip.oritech.jetpack_usage2": "Быстрее с турботопливом.",
   "tooltip.oritech.charger": "Used to charge and fill equipment.",
   "tooltip.oritech.addon_speed_desc": "Скорость работы ",
   "tooltip.oritech.addon_efficiency_desc": "Энергоэффективность",
@@ -189,7 +192,7 @@
   "tooltip.oritech.machine_efficiency": "Энергоэффективность",
   "title.oritech.machine_energy_production": "↗️ %d RF/t ",
   "tooltip.oritech.steam_energy_production": "Общее производство (включая цепные генераторы)",
-  "title.oritech.steam_production": "🛞 %s su/t",
+  "title.oritech.steam_production": "↗ %s RF/т",
   "tooltip.oritech.steam_production": "Количество паровых капель, производимых за тик. Любой избыток будет потерян при заполнении хранилища.",
   "title.oritech.steam_consumption": "🛞 %s su/t",
   "tooltip.oritech.steam_consumption": "Общее потребление пара в накопительных единицах (каплях) на такт (включая цепи-генераторы)",
@@ -330,9 +333,9 @@
   "block.oritech.machine_inventory_proxy_addon": "Дополнение к запасам прокси для машины",
   "block.oritech.machine_redstone_addon": "Дополнение к блоку управления редстоуном",
   "block.oritech.machine_extender": "Расширитель машины",
-  "block.oritech.oil_fluid_block": "Сырая нефть",
-  "block.oritech.fuel_fluid_block": "Турботопливо",
-  "block.oritech.steam_fluid_block": "Пар",
+  "block.oritech.still_oil_block": "Сырая нефть",
+  "block.oritech.still_fuel_block": "Турботопливо",
+  "block.oritech.still_steam_block": "Пар",
   "block.oritech.nickel_ore": "Никелевая руда",
   "block.oritech.deepslate_nickel_ore": "Никеленый глубинный сланец",
   "block.oritech.endstone_platinum_ore": "Платиновая руда Эндстоуна",
@@ -397,9 +400,9 @@
   "item.oritech.banana": "Банан",
   "item.oritech.weed_killer": "Боевой убийца",
   "item.oritech.target_designator": "Целевой указатель",
-  "item.oritech.oil_bucket": "Ведро сырой нефти",
-  "item.oritech.fuel_bucket": "Ведро турботоплива",
-  "item.oritech.steam_bucket": "Ведро пара",
+  "item.oritech.still_oil_bucket": "Ведро сырой нефти",
+  "item.oritech.still_fuel_bucket": "Ведро турботоплива",
+  "item.oritech.still_steam_bucket": "Ведро пара",
   "item.oritech.nickel_ingot": "Слиток никеля",
   "item.oritech.raw_nickel": "Необработанный никель",
   "item.oritech.nickel_clump": "Никелевая глыба",
@@ -743,5 +746,9 @@
   "text.config.oritech-config.option.maxGateDist": "Максимальное расстояние врат частиц",
   "text.config.oritech-config.option.endPortalRequiredSpeed": "Минимальная энергия портала Энда",
   "text.config.oritech-config.option.netherPortalRequiredSpeed": "Минимальная энергия Портала Незера",
-  "text.config.oritech-config.option.blackHoleRequiredSpeed": "Минимальная энергия столкновения черной дыры"
+  "text.config.oritech-config.option.blackHoleRequiredSpeed": "Минимальная энергия столкновения черной дыры",
+  "text.config.oritech-config.section.blackHole": "Чёрная дыра",
+  "text.config.oritech-config.option.pullTimeMultiplier": "Множитель времени притяжения чёрной дыры",
+  "text.config.oritech-config.option.pullRange": "Диапазон притяжения чёрной дыры",
+  "text.config.oritech-config.option.idleWaitTicks": "Тики ожидания простоя черной дыры"
 }
