--- a/common/src/main/resources/assets/oritech/lang/tr_tr.json
+++ b/common/src/main/resources/assets/oritech/lang/tr_tr.json
@@ -194,16 +194,16 @@
   "tooltip.oritech.steam_energy_production": "Toplam üretim (zincirlenmiş jeneratörler dahil)",
   "title.oritech.steam_production": "↗ %s RF/t",
   "tooltip.oritech.steam_production": "Tik başına üretilen buhar damlacıklarının miktarı. Depo dolduğunda herhangi bir fazlalık kaybolacaktır.",
-  "title.oritech.steam_consumption": "\uD83D\uDEDE %s su/t",
+  "title.oritech.steam_consumption": "🛞 %s su/t",
   "tooltip.oritech.steam_consumption": "Tik başına depolama ünitelerindeki toplam buhar tüketimi (damlacıklar) (zincirlenmiş jeneratörler dahil)",
   "tooltip.oritech.energy_usage": "%s / %s RF\n%s%% Şarj Edilmiş\n\nMaksimum Kullanım: %s RF/t",
   "title.oritech.machine.no_addons": "Bağlı eklenti yok",
   "button.oritech.machine.addons": "Eklentiler",
-  "title.oritech.machine.capacitor_added_capacity": "\uD83D\uDD0B %d RF ",
+  "title.oritech.machine.capacitor_added_capacity": "🔋 %d RF ",
   "tooltip.oritech.machine.capacitor_added_capacity": "Kapasite eklendi",
-  "title.oritech.machine.capacitor_added_throughput": "\uD83D\uDD0B %d RF/t",
+  "title.oritech.machine.capacitor_added_throughput": "🔋 %d RF/t",
   "tooltip.oritech.machine.capacitor_added_throughput": "Üretim Hacmi Eklendi",
-  "title.oritech.machine_option_enabled": "\uD83D\uDD28 Etkinleştirildi",
+  "title.oritech.machine_option_enabled": "🔨 Etkinleştirildi",
   "tooltip.oritech.pulverizer_dust_combine": "Küçük tozları külçelere otomatik olarak dönüştürür",
   "tooltip.oritech.fluid_content": "%f mB %s",
   "tooltip.oritech.jetpack_fuel": "%f/%f mB %s",
@@ -240,7 +240,7 @@
   "rei.process.oritech:steam_engine": "Buhar Kullanımı",
   "rei.process.oritech:bio_generator": "Biyokütle Çalkalama",
   "rei.process.oritech:fuel_generator": "Yakıt Yakımı",
-  "rei.process.oritech:particle_collision": "Parçacık Çarpışması",
+  "rei.process.oritech:particle_collision": "Yakıt Yakımı",
   "rei.title.oritech.cookingtime": "%ds (%d tik)",
   "emi.category.oritech.pulverizer": "Toz haline getirme",
   "emi.category.oritech.grinder": "Parçalama",
@@ -333,9 +333,9 @@
   "block.oritech.machine_inventory_proxy_addon": "Makine Envanter Vekili Eklentisi",
   "block.oritech.machine_redstone_addon": "Redstone Control Unit Eklentisi",
   "block.oritech.machine_extender": "Makine Genişletici",
-  "block.oritech.oil_fluid_block": "Ham Petrol",
-  "block.oritech.fuel_fluid_block": "Turbo Yakıt",
-  "block.oritech.steam_fluid_block": "Buhar",
+  "block.oritech.still_oil_block": "Ham Petrol",
+  "block.oritech.still_fuel_block": "Turbo Yakıt",
+  "block.oritech.still_steam_block": "Buhar",
   "block.oritech.nickel_ore": "Nikel Cevheri",
   "block.oritech.deepslate_nickel_ore": "Kayrak Taşında Nikel Cevheri",
   "block.oritech.endstone_platinum_ore": "End Taşında Platin Cevheri",
@@ -400,9 +400,9 @@
   "item.oritech.banana": "Muz",
   "item.oritech.weed_killer": "Yabani Ot Öldürücü",
   "item.oritech.target_designator": "Hedef Belirleyici",
-  "item.oritech.oil_bucket": "Ham Petrol Kovası",
-  "item.oritech.fuel_bucket": "Turbo Yakıt Kovası",
-  "item.oritech.steam_bucket": "Buhar Kovası",
+  "item.oritech.still_oil_bucket": "Ham Petrol Kovası",
+  "item.oritech.still_fuel_bucket": "Turbo Yakıt Kovası",
+  "item.oritech.still_steam_bucket": "Buhar Kovası",
   "item.oritech.nickel_ingot": "Nikel Külçesi",
   "item.oritech.raw_nickel": "Ham Nikel",
   "item.oritech.nickel_clump": "Nikel Tortu",
