--- a/common/src/main/resources/assets/oritech/lang/pt_br.json
+++ b/common/src/main/resources/assets/oritech/lang/pt_br.json
@@ -22,15 +22,15 @@
   "advancements.oritech.drill": "Sargento da Furadeira",
   "advancements.oritech.drill.description": "Obtenha uma furadeira manual e comece a perfurar a terra. Cave fundo, soldado!",
   "advancements.oritech.resource_node": "Glittering Prizes",
-  "advancements.oritech.resource_node.description": "Find a resource node. Unlimited wealth awaits!",
+  "advancements.oritech.resource_node.description": "Ache um nódulo de recursos. Riquezas inacabáveis te esperam!",
   "advancements.oritech.centrifuge": "Mestre da Centrifugação",
   "advancements.oritech.centrifuge.description": "Adquira uma centrífuga e separe o bom do ruim. Gire para vencer!",
   "advancements.oritech.plastic": "Plástico Fantástico",
   "advancements.oritech.plastic.description": "Coloque suas mãos em uma folha de plástico. Não é apenas fantástico, é plástico!",
   "advancements.oritech.catalyst": "Artífice Arcano",
   "advancements.oritech.catalyst.description": "Adquira um Estabilizador Arcano (Aviso: Pode conter almas!)",
-  "advancements.oritech.overenchanted": "Arcane Engineer",
-  "advancements.oritech.overenchanted.description": "Acquire an item with level X enchantment. What explosions?",
+  "advancements.oritech.overenchanted": "Engenheiro Arcano",
+  "advancements.oritech.overenchanted.description": "Adquira um item com um encantamento de nível X. Como assim? Que Explosões?",
   "advancements.oritech.laser": "Foco Laser",
   "advancements.oritech.laser.description": "Obtenha um bloco de braço laser. Carregue, minere fluxita e cave na terra. Pew pew, você é imbatível!",
   "advancements.oritech.fluxite": "Fluxita",
@@ -40,13 +40,15 @@
   "advancements.oritech.promethium": "Fogo Prometeano",
   "advancements.oritech.promethium.description": "Obtenha uma barra de prometium. Você roubou o fogo dos deuses!",
   "advancements.oritech.ultimate_core": "The Ultimate Machine",
-  "advancements.oritech.ultimate_core.description": "Obtain an ultimate machine core. Now you can add excessive addons!",
+  "advancements.oritech.ultimate_core.description": "Obtenha um núcleo supremo. Agora você pode adicionar complementos excessivamente!",
   "advancements.oritech.gold_gem": "Legendary Alchemist",
   "advancements.oritech.gold_gem.description": "Learn the secret art of turning gold into more gold!",
   "advancements.oritech.ai": "Brilhantismo Artificial",
   "advancements.oritech.ai.description": "Obtenha um Chip de Super IA. Skynet quem? Não é apenas inteligente, é super inteligente!",
   "advancements.oritech.unholy": "Conhecimento Profano",
   "advancements.oritech.unholy.description": "Adquira uma inteligência profana. Conhecimento é poder, mas isso é algo a mais!",
+  "advancements.oritech.steam_engine": "Sonhos à Vapor",
+  "advancements.oritech.steam_engine.description": "Harness the power of steam! You've turned water into energy—now let's hope it doesn't turn into a hot mess!",
   "button.oritech.input_mode_fill_left_to_right": "Padrão",
   "button.oritech.input_mode_fill_evenly": "Preencher Uniformemente",
   "button.oritech.input_mode_fill_matching_recipe": "Combinar Receita",
@@ -83,8 +85,9 @@
   "tooltip.oritech.spawner": "Aprisiona o primeiro mob que pisa sobre ele em uma jaula abaixo.",
   "tooltip.oritech.spawner2": "Coleta e usa almas de entidades próximas.",
   "tooltip.oritech.soul_crop": "Cultivado em solo da alma. Contém uma alma.",
-  "tooltip.oritech.superconductor": "Cannot connect to normal energy pipes.",
+  "tooltip.oritech.superconductor": "Não se conecta com tubos de energia normais.",
   "tooltip.oritech.jetpack_usage": "Needs electricity or turbofuel to fly.",
+  "tooltip.oritech.jetpack_usage2": "Is faster with turbofuel.",
   "tooltip.oritech.charger": "Used to charge and fill equipment.",
   "tooltip.oritech.addon_speed_desc": "Velocidade de Operação ",
   "tooltip.oritech.addon_efficiency_desc": "Eficiência Energética ",
@@ -95,7 +98,7 @@
   "tooltip.oritech.addon_proxy_desc": "Permite acesso a slots de inventário específicos",
   "tooltip.oritech.addon_proxy_select": "Selecionar slot de proxy alvo",
   "tooltip.oritech.addon_quarry_desc": "Aplicável ao destruidor de blocos e Enderic Laser. Aumenta o tamanho da área de trabalho",
-  "tooltip.oritech.addon_hunter_desc": "Applicable to Enderic Laser. Targets living entities",
+  "tooltip.oritech.addon_hunter_desc": "Aplicável no Laser Endérico. Atinge entidades vivas",
   "tooltip.oritech.addon_redstone_desc": "Permite configuração adicional de redstone e comparadores",
   "tooltip.oritech.addon_capacity_desc": "Capacidade de Energia ",
   "tooltip.oritech.addon_transfer_desc": "Taxa de Transferência de Energia ",
@@ -112,7 +115,7 @@
   "tooltip.oritech.exo_jetpack": "Carrega itens de energia equipados",
   "tooltip.oritech.jetpack_exo_elytra": "Carrega itens de energia equipados",
   "tooltip.oritech.exo_helmet": "Concede visão noturna",
-  "tooltip.oritech.black_hole": "DON'T PLACE THIS unless you know what you're doing.",
+  "tooltip.oritech.black_hole": "NÃO COLOQUE ISSO, só coloque se você sabe o que está fazendo.",
   "tooltip.oritech.weed_killer": "Remove toda a grama e plantas em um amplo raio",
   "tooltip.oritech.intelligence_item": [
     {
@@ -189,7 +192,7 @@
   "tooltip.oritech.machine_efficiency": "Eficiência Energética",
   "title.oritech.machine_energy_production": "↗ %d RF/t ",
   "tooltip.oritech.steam_energy_production": "Produção total (inclui geradores encadeados)",
-  "title.oritech.steam_production": "🛞 %s su/t",
+  "title.oritech.steam_production": "↗ %s RF/t",
   "tooltip.oritech.steam_production": "Quantidade de gotas de vapor produzidas por tick. Qualquer excesso será perdido quando o armazenamento estiver cheio.",
   "title.oritech.steam_consumption": "🛞 %s su/t",
   "tooltip.oritech.steam_consumption": "Consumo total de vapor em unidades de armazenamento (gotas) por tick (inclui geradores encadeados)",
@@ -211,8 +214,8 @@
   "title.oritech.catalyst.semi_stable": "Semi-Estável",
   "title.oritech.catalyst.unstable": "Instável",
   "tooltip.oritech.spawner.collected_souls": "%d / %d Almas",
-  "tooltip.oritech.accelerator": "Injects particles into particle accelerator guide rings.",
-  "tooltip.oritech.accelerator_motor": "Uses energy to speed up particles moving through it.",
+  "tooltip.oritech.accelerator": "Injeta partículas nos anéis-guia do acelerador de partículas.",
+  "tooltip.oritech.accelerator_motor": "Usa energia para acelerar partículas se movendo atravéz isso.",
   "tooltip.oritech.accelerator_ring": "Used to define the route of particles. Can be right-clicked to turn one end. Redstone-controllable.",
   "tooltip.oritech.accelerator_sensor": "Emits a redstone signal based on the speed of particles passing through.",
   "button.oritech.enchanter.bane_of_long_names": "Flagelo de nomes longos",
@@ -221,9 +224,9 @@
   "title.oritech.enchanter.souls_used": "%d / %d Almas usadas",
   "title.oritech.laser_arm.addon_range": "%d Size",
   "title.oritech.machine.addon_hunter_range": "%d Scan distance",
-  "tooltip.oritech.laser_arm.addon_hunter_range": "Effective beam range",
+  "tooltip.oritech.laser_arm.addon_hunter_range": "Distância efetiva do feixe",
   "title.oritech.laser_arm.addon_hunter_damage": "%d Damage",
-  "tooltip.oritech.laser_arm.addon_hunter_damage": "Effective Beam Damage",
+  "tooltip.oritech.laser_arm.addon_hunter_damage": "Dano efetivo do feixe",
   "title.oritech.machine.addon_looting": "%d Looting",
   "tooltip.oritech.machine.addon_looting": "Contagem de addon de rendimento. 3 é o máximo efetivo",
   "rei.process.oritech:pulverizer": "Pulverizando",
@@ -323,16 +326,16 @@
   "block.oritech.steam_boiler_addon": "Addon de Caldeira a Vapor",
   "block.oritech.crop_filter_addon": "Addon de Filtro de Plantações",
   "block.oritech.quarry_addon": "Addon de Pedreira",
-  "block.oritech.machine_hunter_addon": "Machine Hunter Addon",
+  "block.oritech.machine_hunter_addon": "Addon de Máquina Caçadora",
   "block.oritech.machine_efficiency_addon": "Addon de Eficiência da Máquina",
   "block.oritech.machine_capacitor_addon": "Addon de Capacitor da Máquina",
   "block.oritech.machine_acceptor_addon": "Addon de Aceitação da Máquina",
   "block.oritech.machine_inventory_proxy_addon": "Addon de Proxy de Inventário da Máquina",
   "block.oritech.machine_redstone_addon": "Addon de Controle de Redstone",
   "block.oritech.machine_extender": "Extensor de Máquina",
-  "block.oritech.oil_fluid_block": "Petróleo Cru",
-  "block.oritech.fuel_fluid_block": "Combustível Turbo",
-  "block.oritech.steam_fluid_block": "Vapor",
+  "block.oritech.still_oil_block": "Petróleo Cru",
+  "block.oritech.still_fuel_block": "Combustível Turbo",
+  "block.oritech.still_steam_block": "Vapor",
   "block.oritech.nickel_ore": "Minério de Níquel",
   "block.oritech.deepslate_nickel_ore": "Minério de Níquel em Ardósia",
   "block.oritech.endstone_platinum_ore": "Minério de Platina em Ardósia",
@@ -397,9 +400,9 @@
   "item.oritech.banana": "Banana",
   "item.oritech.weed_killer": "Herbicida",
   "item.oritech.target_designator": "Designador de Alvo",
-  "item.oritech.oil_bucket": "Balde de Petróleo Cru",
-  "item.oritech.fuel_bucket": "Balde de Combustível Turbo",
-  "item.oritech.steam_bucket": "Balde de Vapor",
+  "item.oritech.still_oil_bucket": "Balde de Petróleo Cru",
+  "item.oritech.still_fuel_bucket": "Balde de Combustível Turbo",
+  "item.oritech.still_steam_bucket": "Balde de Vapor",
   "item.oritech.nickel_ingot": "Lingote de Níquel",
   "item.oritech.raw_nickel": "Níquel Cru",
   "item.oritech.nickel_clump": "Agregado de Níquel",
@@ -527,7 +530,7 @@
   "message.oritech.target_designator.position_invalid": "Posição inválida para o porto do drone, a porto alvo deve estar a pelo menos 50 blocos de distância",
   "message.oritech.target_designator.position_saved": "Posição salva na máquina",
   "message.oritech.target_designator.position_stored": "Posição armazenada",
-  "message.oritech.target_designator.hunter_target": "Hunter target set to %s",
+  "message.oritech.target_designator.hunter_target": "Alvo definido como %s",
   "message.oritech.target_designator.hunter_hostile": "hostile mobs only",
   "message.oritech.target_designator.hunter_neutral": "hostile and neutral mobs (pets excluded)",
   "message.oritech.target_designator.hunter_all": "all non-player mobs",
@@ -545,13 +548,13 @@
   "text.oritech.accelerator.ui.error": "Error",
   "text.oritech.accelerator.ui.nogate": "No valid gate found",
   "text.oritech.accelerator.ui.nogate.more": "Gate needs to be\npointed to the side",
-  "text.oritech.accelerator.ui.accelerating": "Accelerating",
+  "text.oritech.accelerator.ui.accelerating": "Acelerando",
   "text.oritech.accelerator.ui.accelerating.speed": "Speed: %s m/s",
-  "text.oritech.accelerator.ui.accelerating.stats": "Max Gate Dist: %s\nMin Curve Dist: %s",
-  "text.oritech.accelerator.ui.collision": "Collision Details",
+  "text.oritech.accelerator.ui.accelerating.stats": "Distância má. de válvula: %s\nDistância min de curva: %s",
+  "text.oritech.accelerator.ui.collision": "Detalhes da Colisão",
   "text.oritech.accelerator.ui.collision.stats": "Collision Power: %sJ",
   "text.oritech.accelerator.ui.collision.position": "Coordinates %s",
-  "text.oritech.accelerator.ui.exited": "Particle Exited",
+  "text.oritech.accelerator.ui.exited": "Partícula Saiu",
   "text.oritech.accelerator.ui.exited.stats": "Coordinates %s\nLast Curve Dist: %s\nMin Curve Dist: %s",
   "text.oritech.accelerator.ui.exited.nogate": "Coordinates %s\nNo gate in range\nRange: %s",
   "text.config.oritech-config.title": "Configurações Oritech",
@@ -686,32 +689,32 @@
   "text.config.oritech-config.option.charger.energyPerTick": "Charger Energy Per Tick",
   "text.config.oritech-config.option.basicJetpack.energyCapacity": "Basic Jetpack Energy Capacity",
   "text.config.oritech-config.option.basicJetpack.fuelCapacity": "Basic Jetpack Fuel Capacity",
-  "text.config.oritech-config.option.basicJetpack.energyUsage": "Basic Jetpack Energy Usage",
-  "text.config.oritech-config.option.basicJetpack.fuelUsage": "Basic Jetpack Fuel Usage",
+  "text.config.oritech-config.option.basicJetpack.energyUsage": "Uso de Energia da Jetpack Básica",
+  "text.config.oritech-config.option.basicJetpack.fuelUsage": "Consumo de Combustível da Jetpack Básica",
   "text.config.oritech-config.option.basicJetpack.chargeSpeed": "Basic Jetpack Charge Speed",
   "text.config.oritech-config.option.basicJetpack.speed": "Basic Jetpack Speed",
   "text.config.oritech-config.option.exoJetpack.energyCapacity": "Exo Jetpack Energy Capacity",
   "text.config.oritech-config.option.exoJetpack.fuelCapacity": "Exo Jetpack Fuel Capacity",
-  "text.config.oritech-config.option.exoJetpack.energyUsage": "Exo Jetpack Energy Usage",
-  "text.config.oritech-config.option.exoJetpack.fuelUsage": "Exo Jetpack Fuel Usage",
-  "text.config.oritech-config.option.exoJetpack.chargeSpeed": "Exo Jetpack Charge Speed",
-  "text.config.oritech-config.option.exoJetpack.speed": "Exo Jetpack Speed",
+  "text.config.oritech-config.option.exoJetpack.energyUsage": "Uso de Energia da Exo Jetpack",
+  "text.config.oritech-config.option.exoJetpack.fuelUsage": "Uso de Combustível da Exo Jetpack",
+  "text.config.oritech-config.option.exoJetpack.chargeSpeed": "Velocidade de Carga da Exo Jetpack",
+  "text.config.oritech-config.option.exoJetpack.speed": "Velocidade da Exo Jetpack",
   "text.config.oritech-config.option.elytraJetpack.energyCapacity": "Elytra Jetpack Energy Capacity",
   "text.config.oritech-config.option.elytraJetpack.fuelCapacity": "Elytra Jetpack Fuel Capacity",
-  "text.config.oritech-config.option.elytraJetpack.energyUsage": "Elytra Jetpack Energy Usage",
-  "text.config.oritech-config.option.elytraJetpack.fuelUsage": "Elytra Jetpack Fuel Usage",
-  "text.config.oritech-config.option.elytraJetpack.chargeSpeed": "Elytra Jetpack Charge Speed",
-  "text.config.oritech-config.option.elytraJetpack.speed": "Elytra Jetpack Speed",
-  "text.config.oritech-config.option.exoElytraJetpack.energyCapacity": "Exo Elytra Jetpack Energy Capacity",
+  "text.config.oritech-config.option.elytraJetpack.energyUsage": "Uso Energético da Jetpack-Elytra",
+  "text.config.oritech-config.option.elytraJetpack.fuelUsage": "Uso de Combustível da Jetpack com Elytra",
+  "text.config.oritech-config.option.elytraJetpack.chargeSpeed": "Velocidade de Carga da Jetpack-Elytra",
+  "text.config.oritech-config.option.elytraJetpack.speed": "Velocidade da Jetpack com Elytra",
+  "text.config.oritech-config.option.exoElytraJetpack.energyCapacity": "Capacidade de Energia da Exo Elytra-Jetpack",
   "text.config.oritech-config.option.exoElytraJetpack.fuelCapacity": "Exo Elytra Jetpack Fuel Capacity",
   "text.config.oritech-config.option.exoElytraJetpack.energyUsage": "Exo Elytra Jetpack Energy Usage",
   "text.config.oritech-config.option.exoElytraJetpack.fuelUsage": "Exo Elytra Jetpack Fuel Usage",
   "text.config.oritech-config.option.exoElytraJetpack.chargeSpeed": "Exo Elytra Jetpack Charge Speed",
-  "text.config.oritech-config.option.exoElytraJetpack.speed": "Exo Elytra Jetpack Speed",
-  "text.config.oritech-config.option.exoChestplate.energyCapacity": "Exo Chestplate Energy Capacity",
-  "text.config.oritech-config.option.exoChestplate.energyUsage": "Exo Chestplate Energy Usage",
+  "text.config.oritech-config.option.exoElytraJetpack.speed": "Velocidade da Exo Elytra-Jetpack",
+  "text.config.oritech-config.option.exoChestplate.energyCapacity": "Capacidade Energética do Exo Peitoral",
+  "text.config.oritech-config.option.exoChestplate.energyUsage": "Uso Energético do Exo Peitoral",
   "text.config.oritech-config.option.exoChestplate.chargeSpeed": "Exo Chestplate Charge Speed",
-  "text.config.oritech-config.option.basicDrill.energyCapacity": "Basic Drill Energy Capacity",
+  "text.config.oritech-config.option.basicDrill.energyCapacity": "Capacidade de Energia da Broca Básica",
   "text.config.oritech-config.option.basicDrill.energyUsage": "Basic Drill Energy Usage",
   "text.config.oritech-config.option.basicDrill.chargeSpeed": "Basic Drill Charge Speed",
   "text.config.oritech-config.option.chainSaw.energyCapacity": "Chain Saw Energy Capacity",
@@ -738,10 +741,14 @@
   "text.config.oritech-config.option.tightCableHitboxes": "Hitboxes de Cabos Apertadas",
   "text.config.oritech-config.option.machineVolumeMultiplier": "Multiplicador de Volume do Som da Máquina",
   "text.config.oritech-config.section.particleAccelerator": "Particle Accelerator",
-  "text.config.oritech-config.option.bendFactor": "Particle Curve Requirement Factor",
-  "text.config.oritech-config.option.accelerationRFCost": "Base Particle RF Acceleration Cost",
-  "text.config.oritech-config.option.maxGateDist": "Maximum Particle Gate Distance",
+  "text.config.oritech-config.option.bendFactor": "Fator de Exigência da Curvatura das Partículas",
+  "text.config.oritech-config.option.accelerationRFCost": "Custo RF base para a Aceleração",
+  "text.config.oritech-config.option.maxGateDist": "Distância Máxima da Válvula de Partículas",
   "text.config.oritech-config.option.endPortalRequiredSpeed": "Minimum End Portal Collision Energy",
   "text.config.oritech-config.option.netherPortalRequiredSpeed": "Minimum Nether Portal Collision Energy",
-  "text.config.oritech-config.option.blackHoleRequiredSpeed": "Minimum Black Hole Collision Energy"
+  "text.config.oritech-config.option.blackHoleRequiredSpeed": "Minimum Black Hole Collision Energy",
+  "text.config.oritech-config.section.blackHole": "Black Hole",
+  "text.config.oritech-config.option.pullTimeMultiplier": "Black Hole Pull Time Multiplier",
+  "text.config.oritech-config.option.pullRange": "Black Hole Pull Range",
+  "text.config.oritech-config.option.idleWaitTicks": "Ticks de Espera para o Tempo de Inatividade"
 }
