--- a/common/src/main/resources/assets/oritech/lang/zh_cn.json
+++ b/common/src/main/resources/assets/oritech/lang/zh_cn.json
@@ -12,13 +12,13 @@
   "advancements.oritech.assembler": "流水作业",
   "advancements.oritech.assembler.description": "获得一个自动装配机并开始合成物品。现在可都合在一起了！",
   "advancements.oritech.exo_boots": "仙履轻缘",
-  "advancements.oritech.exo_boots.description": "合成Exo靴子，与摔落伤害说再见。重力？从未听说过！",
+  "advancements.oritech.exo_boots.description": "合成外骨骼靴子，与摔落伤害说再见。重力？从未听说过！",
   "advancements.oritech.exo_legs": "腿部特训",
-  "advancements.oritech.exo_legs.description": "制造Exo护腿，在比赛中高人一筹。更强，更快，更好！",
+  "advancements.oritech.exo_legs.description": "制造外骨骼护腿，在比赛中高人一筹。更强，更快，更好！",
   "advancements.oritech.exo_chest": "钢铁雄心",
-  "advancements.oritech.exo_chest.description": "制造一个Exo胸甲，保护你的核心。钢铁侠，谁？",
+  "advancements.oritech.exo_chest.description": "制造一个外骨骼胸甲，保护你的核心。钢铁侠，谁？",
   "advancements.oritech.exo_helmet": "先拔头筹",
-  "advancements.oritech.exo_helmet.description": "合成一个Exo头盔，在游戏中拔得头筹。思想胜过物质！",
+  "advancements.oritech.exo_helmet.description": "合成一个外骨骼头盔，在游戏中拔得头筹。思想胜过物质！",
   "advancements.oritech.drill": "钻头教官",
   "advancements.oritech.drill.description": "获得一个手提钻头，开始挖穿地球。再深些，士兵！",
   "advancements.oritech.resource_node": "闪闪之赏",
@@ -47,6 +47,8 @@
   "advancements.oritech.ai.description": "获得一个超级AI芯片。天网？不只是智慧，而是无比智慧！",
   "advancements.oritech.unholy": "堕落之智",
   "advancements.oritech.unholy.description": "获得一个堕落智能。知识就是力量，但这个是别的东西！",
+  "advancements.oritech.steam_engine": "氤氲幻境",
+  "advancements.oritech.steam_engine.description": "驯化蒸汽之力！你已经把水转化成了能量，祈祷它不会进一步变为混乱的热点吧！",
   "button.oritech.input_mode_fill_left_to_right": "默认",
   "button.oritech.input_mode_fill_evenly": "均匀填充",
   "button.oritech.input_mode_fill_matching_recipe": "匹配配方",
@@ -85,6 +87,7 @@
   "tooltip.oritech.soul_crop": "在灵魂土上生长。包含一个灵魂。",
   "tooltip.oritech.superconductor": "不能连接至普通的能量线缆",
   "tooltip.oritech.jetpack_usage": "需要电力或涡轮燃料来飞行。",
+  "tooltip.oritech.jetpack_usage2": "使用涡轮燃料更快。",
   "tooltip.oritech.charger": "可用于为装备充能",
   "tooltip.oritech.addon_speed_desc": "处理速度 ",
   "tooltip.oritech.addon_efficiency_desc": "能量效率 ",
@@ -112,7 +115,7 @@
   "tooltip.oritech.exo_jetpack": "为装备的能量物品充能",
   "tooltip.oritech.jetpack_exo_elytra": "为装备的能量物品充能",
   "tooltip.oritech.exo_helmet": "给予夜视效果",
-  "tooltip.oritech.black_hole": "不 要 放 置 它，除非你知道自己在做什么",
+  "tooltip.oritech.black_hole": "除非你清楚自己在做什么，否则请不要放置它！",
   "tooltip.oritech.weed_killer": "在较大范围内移除所有草和植物",
   "tooltip.oritech.intelligence_item": [
     {
@@ -189,7 +192,7 @@
   "tooltip.oritech.machine_efficiency": "能量效率",
   "title.oritech.machine_energy_production": "↗ %d RF/刻",
   "tooltip.oritech.steam_energy_production": "总产量（包括连锁的发电机）",
-  "title.oritech.steam_production": "🛞 %s 蒸汽单位/刻",
+  "title.oritech.steam_production": "↗ %s RF/刻",
   "tooltip.oritech.steam_production": "每刻蒸汽液滴产量。当存储已满时，任何溢出将会丢失。",
   "title.oritech.steam_consumption": "🛞 %s 蒸汽单位/刻",
   "tooltip.oritech.steam_consumption": "总蒸汽消耗量每刻以存储单元（液滴）计 （包括连锁的发电机）",
@@ -330,9 +333,9 @@
   "block.oritech.machine_inventory_proxy_addon": "机器物品栏代理插件",
   "block.oritech.machine_redstone_addon": "红石控制单元插件",
   "block.oritech.machine_extender": "机器扩展坞",
-  "block.oritech.oil_fluid_block": "原油",
-  "block.oritech.fuel_fluid_block": "涡轮燃料",
-  "block.oritech.steam_fluid_block": "蒸汽",
+  "block.oritech.still_oil_block": "原油",
+  "block.oritech.still_fuel_block": "涡轮燃料",
+  "block.oritech.still_steam_block": "蒸汽",
   "block.oritech.nickel_ore": "镍矿石",
   "block.oritech.deepslate_nickel_ore": "深层镍矿石",
   "block.oritech.endstone_platinum_ore": "末地铂矿石",
@@ -397,9 +400,9 @@
   "item.oritech.banana": "香蕉",
   "item.oritech.weed_killer": "除草剂",
   "item.oritech.target_designator": "目标标识器",
-  "item.oritech.oil_bucket": "原油桶",
-  "item.oritech.fuel_bucket": "涡轮燃料桶",
-  "item.oritech.steam_bucket": "蒸汽桶",
+  "item.oritech.still_oil_bucket": "原油桶",
+  "item.oritech.still_fuel_bucket": "涡轮燃料桶",
+  "item.oritech.still_steam_bucket": "蒸汽桶",
   "item.oritech.nickel_ingot": "镍锭",
   "item.oritech.raw_nickel": "粗镍",
   "item.oritech.nickel_clump": "镍碎块",
@@ -432,7 +435,7 @@
   "item.oritech.gold_dust": "金粉",
   "item.oritech.small_gold_dust": "细金粉",
   "item.oritech.gold_gem": "金石",
-  "item.oritech.fluxite": "辐水晶",
+  "item.oritech.fluxite": "通量水晶",
   "item.oritech.adamant_ingot": "精镍锭",
   "item.oritech.adamant_dust": "精镍粉",
   "item.oritech.biosteel_ingot": "有机钢锭",
@@ -482,16 +485,16 @@
   "item.oritech.quartz_dust": "石英粉",
   "item.oritech.biomass": "生物质",
   "item.oritech.solid_biofuel": "固体生物燃料",
-  "item.oritech.exo_helmet": "Exo 头盔",
-  "item.oritech.exo_chestplate": "Exo 胸甲",
-  "item.oritech.exo_leggings": "Exo 护腿",
-  "item.oritech.exo_boots": "Exo 靴子",
-  "item.oritech.chainsaw": "电锯",
+  "item.oritech.exo_helmet": "外骨骼头盔",
+  "item.oritech.exo_chestplate": "外骨骼胸甲",
+  "item.oritech.exo_leggings": "外骨骼护腿",
+  "item.oritech.exo_boots": "外骨骼靴子",
+  "item.oritech.chainsaw": "链锯",
   "item.oritech.hand_drill": "手钻",
   "item.oritech.jetpack": "喷气背包",
-  "item.oritech.exo_jetpack": "Exo 喷气背包",
+  "item.oritech.exo_jetpack": "外骨骼喷气背包",
   "item.oritech.jetpack_elytra": "强化鞘翅",
-  "item.oritech.jetpack_exo_elytra": "强化Exo鞘翅",
+  "item.oritech.jetpack_exo_elytra": "强化外骨骼鞘翅",
   "item.oritech.oritech_guide": "Oritech 手册",
   "item.oritech.promethium_axe": [
     {
@@ -674,12 +677,12 @@
   "text.config.oritech-config.section.equipment": "装备",
   "text.config.oritech-config.category.charger": "充能器",
   "text.config.oritech-config.category.basicJetpack": "基础喷气背包",
-  "text.config.oritech-config.category.exoJetpack": "Exo 喷气背包",
-  "text.config.oritech-config.category.elytraJetpack": "Elytra Jetpack",
-  "text.config.oritech-config.category.exoElytraJetpack": "Exo Elytra Jetpack",
-  "text.config.oritech-config.category.exoChestplate": "Exo 胸甲",
+  "text.config.oritech-config.category.exoJetpack": "外骨骼喷气背包",
+  "text.config.oritech-config.category.elytraJetpack": "鞘翅喷气背包",
+  "text.config.oritech-config.category.exoElytraJetpack": "外骨骼喷气背包鞘翅",
+  "text.config.oritech-config.category.exoChestplate": "外骨骼胸甲",
   "text.config.oritech-config.category.basicDrill": "基础钻头",
-  "text.config.oritech-config.category.chainSaw": "Chain Saw",
+  "text.config.oritech-config.category.chainSaw": "链锯",
   "text.config.oritech-config.option.charger.energyCapacity": "充能器能量容量",
   "text.config.oritech-config.option.charger.maxEnergyInsertion": "充能器最大能量输入",
   "text.config.oritech-config.option.charger.maxEnergyExtraction": "充能器最大能量输出",
@@ -688,35 +691,35 @@
   "text.config.oritech-config.option.basicJetpack.fuelCapacity": "基础喷气背包燃料容量",
   "text.config.oritech-config.option.basicJetpack.energyUsage": "基础喷气背包能量消耗",
   "text.config.oritech-config.option.basicJetpack.fuelUsage": "基础喷气背包燃料消耗",
-  "text.config.oritech-config.option.basicJetpack.chargeSpeed": "Basic Jetpack Charge Speed",
+  "text.config.oritech-config.option.basicJetpack.chargeSpeed": "基础喷气背包充能速度",
   "text.config.oritech-config.option.basicJetpack.speed": "基础喷气背包速度",
-  "text.config.oritech-config.option.exoJetpack.energyCapacity": "Exo Jetpack Energy Capacity",
-  "text.config.oritech-config.option.exoJetpack.fuelCapacity": "Exo Jetpack Fuel Capacity",
-  "text.config.oritech-config.option.exoJetpack.energyUsage": "Exo Jetpack Energy Usage",
-  "text.config.oritech-config.option.exoJetpack.fuelUsage": "Exo Jetpack Fuel Usage",
-  "text.config.oritech-config.option.exoJetpack.chargeSpeed": "Exo Jetpack Charge Speed",
-  "text.config.oritech-config.option.exoJetpack.speed": "Exo 喷气背包速度",
-  "text.config.oritech-config.option.elytraJetpack.energyCapacity": "Elytra Jetpack Energy Capacity",
-  "text.config.oritech-config.option.elytraJetpack.fuelCapacity": "Elytra Jetpack Fuel Capacity",
-  "text.config.oritech-config.option.elytraJetpack.energyUsage": "Elytra Jetpack Energy Usage",
-  "text.config.oritech-config.option.elytraJetpack.fuelUsage": "Elytra Jetpack Fuel Usage",
-  "text.config.oritech-config.option.elytraJetpack.chargeSpeed": "Elytra Jetpack Charge Speed",
-  "text.config.oritech-config.option.elytraJetpack.speed": "Elytra Jetpack Speed",
-  "text.config.oritech-config.option.exoElytraJetpack.energyCapacity": "Exo Elytra Jetpack Energy Capacity",
-  "text.config.oritech-config.option.exoElytraJetpack.fuelCapacity": "Exo Elytra Jetpack Fuel Capacity",
-  "text.config.oritech-config.option.exoElytraJetpack.energyUsage": "Exo Elytra Jetpack Energy Usage",
-  "text.config.oritech-config.option.exoElytraJetpack.fuelUsage": "Exo Elytra Jetpack Fuel Usage",
-  "text.config.oritech-config.option.exoElytraJetpack.chargeSpeed": "Exo Elytra Jetpack Charge Speed",
-  "text.config.oritech-config.option.exoElytraJetpack.speed": "Exo Elytra Jetpack Speed",
-  "text.config.oritech-config.option.exoChestplate.energyCapacity": "Exo Chestplate Energy Capacity",
-  "text.config.oritech-config.option.exoChestplate.energyUsage": "Exo Chestplate Energy Usage",
-  "text.config.oritech-config.option.exoChestplate.chargeSpeed": "Exo Chestplate Charge Speed",
-  "text.config.oritech-config.option.basicDrill.energyCapacity": "Basic Drill Energy Capacity",
+  "text.config.oritech-config.option.exoJetpack.energyCapacity": "外骨骼喷气背包能量容量",
+  "text.config.oritech-config.option.exoJetpack.fuelCapacity": "外骨骼喷气背包燃料容量",
+  "text.config.oritech-config.option.exoJetpack.energyUsage": "外骨骼喷气背包能量消耗",
+  "text.config.oritech-config.option.exoJetpack.fuelUsage": "外骨骼喷气背包燃料消耗",
+  "text.config.oritech-config.option.exoJetpack.chargeSpeed": "外骨骼喷气背包充能速度",
+  "text.config.oritech-config.option.exoJetpack.speed": "外骨骼喷气背包速度",
+  "text.config.oritech-config.option.elytraJetpack.energyCapacity": "鞘翅喷气背包能量容量",
+  "text.config.oritech-config.option.elytraJetpack.fuelCapacity": "鞘翅喷气背包燃料容量",
+  "text.config.oritech-config.option.elytraJetpack.energyUsage": "鞘翅喷气背包能量消耗",
+  "text.config.oritech-config.option.elytraJetpack.fuelUsage": "鞘翅喷气背包燃料消耗",
+  "text.config.oritech-config.option.elytraJetpack.chargeSpeed": "鞘翅喷气背包充能速度",
+  "text.config.oritech-config.option.elytraJetpack.speed": "鞘翅喷气背包速度",
+  "text.config.oritech-config.option.exoElytraJetpack.energyCapacity": "外骨骼喷气背包鞘翅能量容量",
+  "text.config.oritech-config.option.exoElytraJetpack.fuelCapacity": "外骨骼喷气背包鞘翅燃料容量",
+  "text.config.oritech-config.option.exoElytraJetpack.energyUsage": "外骨骼喷气背包鞘翅能量消耗",
+  "text.config.oritech-config.option.exoElytraJetpack.fuelUsage": "外骨骼喷气背包鞘翅燃料消耗",
+  "text.config.oritech-config.option.exoElytraJetpack.chargeSpeed": "外骨骼喷气背包鞘翅充能速度",
+  "text.config.oritech-config.option.exoElytraJetpack.speed": "外骨骼喷气背包鞘翅速度",
+  "text.config.oritech-config.option.exoChestplate.energyCapacity": "外骨骼胸甲能量容量",
+  "text.config.oritech-config.option.exoChestplate.energyUsage": "外骨骼胸甲能量消耗",
+  "text.config.oritech-config.option.exoChestplate.chargeSpeed": "外骨骼胸甲充能速度",
+  "text.config.oritech-config.option.basicDrill.energyCapacity": "基础钻头能量容量",
   "text.config.oritech-config.option.basicDrill.energyUsage": "基础钻头能量消耗",
-  "text.config.oritech-config.option.basicDrill.chargeSpeed": "Basic Drill Charge Speed",
-  "text.config.oritech-config.option.chainSaw.energyCapacity": "Chain Saw Energy Capacity",
-  "text.config.oritech-config.option.chainSaw.energyUsage": "Chain Saw Energy Usage",
-  "text.config.oritech-config.option.chainSaw.chargeSpeed": "Chain Saw Charge Speed",
+  "text.config.oritech-config.option.basicDrill.chargeSpeed": "基础钻头充能速度",
+  "text.config.oritech-config.option.chainSaw.energyCapacity": "链锯能量容量",
+  "text.config.oritech-config.option.chainSaw.energyUsage": "链锯能量消耗",
+  "text.config.oritech-config.option.chainSaw.chargeSpeed": "链锯充能速度",
   "text.config.oritech-config.section.arcane": "奥术",
   "text.config.oritech-config.option.enchanterCostMultiplier": "附魔器灵魂消耗倍率",
   "text.config.oritech-config.option.catalystBaseSouls": "触媒基础灵魂容量",
@@ -743,5 +746,9 @@
   "text.config.oritech-config.option.maxGateDist": "粒子门距离上限",
   "text.config.oritech-config.option.endPortalRequiredSpeed": "末地传送门产生最小对撞能量",
   "text.config.oritech-config.option.netherPortalRequiredSpeed": "下界传送门产生最小对撞能量",
-  "text.config.oritech-config.option.blackHoleRequiredSpeed": "黑洞产生最小对撞能量"
+  "text.config.oritech-config.option.blackHoleRequiredSpeed": "黑洞产生最小对撞能量",
+  "text.config.oritech-config.section.blackHole": "黑洞",
+  "text.config.oritech-config.option.pullTimeMultiplier": "黑洞撕扯频率",
+  "text.config.oritech-config.option.pullRange": "黑洞撕扯范围",
+  "text.config.oritech-config.option.idleWaitTicks": "黑洞空闲等待时间（单位：刻）"
 }
