Add pipe booster block

--- a/common/src/main/resources/assets/oritech/lang/en_us.json
+++ b/common/src/main/resources/assets/oritech/lang/en_us.json
@@ -199,6 +199,7 @@
   "tooltip.oritech.energy_usage": "%s / %s RF\n%s%% Charged\n\nMaximum Usage: %s RF/t",
   "title.oritech.machine.no_addons": "No addons connected",
   "button.oritech.machine.addons": "Addons",
+  "tooltip.oritech.pipe_booster": "Increases the extraction speed of a fluid/item pipe behind it",
   "title.oritech.machine.capacitor_added_capacity": "\uD83D\uDD0B %d RF ",
   "tooltip.oritech.machine.capacitor_added_capacity": "Added Capacity",
   "title.oritech.machine.capacitor_added_throughput": "\uD83D\uDD0B %d RF/t",
@@ -302,6 +303,7 @@
   "block.oritech.powered_furnace_block": "Powered Furnace",
   "block.oritech.laser_arm_block": "Enderic Laser",
   "block.oritech.deep_drill_block": "Bedrock Extractor",
+  "block.oritech.pipe_booster_block": "Pipe Booster",
   "block.oritech.drone_port_block": "Drone Port",
   "block.oritech.charger_block": "Equipment Charger",
   "block.oritech.small_storage_block": "Portable Energy Storage",
