Add item booster to docs, add item pipe and arcane pictures

--- a/docs/logistics/fluid_transport.mdx
+++ b/docs/logistics/fluid_transport.mdx
@@ -3,10 +3,14 @@ title: Fluids
 icon: oritech:fluid_pipe
 ---
 
-Fluid pipes behave similarly to item pipes. However, they also have a small internal storage at each connection. Like item pipes, when set to extract, they will extract from all neighboring blocks. However, unlike item pipes, blocks can also push fluids into a pipe, which the pipe then moves to the next available fluid storage.
+Fluid pipes behave similarly to item pipes. However, they also have a small internal storage at each connection.
+Like item pipes, when set to extract, they will extract from all neighboring blocks.
+However, unlike item pipes, blocks can also push fluids into a pipe, which the pipe then moves to the next available fluid storage.
 
-To store fluids, you can use a fluid tank. The small fluid tank stores up to *256* buckets of fluid. When broken, the small tank retains all of its content in the item NBT. A comparator output will reflect the tank's fill status. Stacked tanks will automatically let the fluid flow downward.
+To store fluids, you can use a fluid tank. The small fluid tank stores up to *256* buckets of fluid.
+When broken, the small tank retains all of its content in the item NBT. A comparator output will reflect the tank's fill status.
+Stacked tanks will automatically let the fluid flow downward.
 
 <center>
-<ModAsset location="oritech:small_tank_block" width={256} />
+<ModAsset location="oritech:area/fluid_pipes" width={512} />
 </center>
