--- a/docs/arcane/enchantments.mdx
+++ b/docs/arcane/enchantments.mdx
@@ -4,14 +4,17 @@ icon: oritech:enchanter_block
 ---
 
 Oritech offers two methods for applying enchantments. All Oritech equipment and tools are enchantable. The first option is the stabilized enchanter,
-which allows the application of "normal" enchantments to equipment. The second option is the arcane catalyst, which can apply any enchantment from an enchanted book to any item, at any level.
-
-<ModAsset location="oritech:enchanter_block" />
+which allows the application of "normal" enchantments to equipment. The second option is the arcane catalyst,
+which can apply any enchantment from an enchanted book to any item, at any level.
 
 The stabilized enchanter operates on a single item. When an item is inserted, you can select the enchantment to be applied from the GUI. The enchantment
-is stored for subsequent items but can also be changed. Both energy and souls are required to operate. The enchanter doesn't collect souls itself; nearby enchantment catalysts with stored souls are needed. The number of required catalysts depends on the enchantment level. Only catalysts with stored souls are counted.
+is stored for subsequent items but can also be changed. Both energy and souls are required to operate.
+The enchanter doesn't collect souls itself; nearby enchantment catalysts with stored souls are needed.
+The number of required catalysts depends on the enchantment level. Only catalysts with stored souls are counted.
 
-<ModAsset location="oritech:enchantment_catalyst_block" />
+<center>
+<ModAsset location="oritech:area/enchanting" width={640} />
+</center>
 
 The arcane catalyst block can store souls and provide them to the stabilized enchanter. It may also enchant items using books.
 The book used must be at the maximum level of the enchantment. It can apply any enchantment to any item.
@@ -28,3 +31,8 @@ This significantly increases the enchantment cost but allows you to exceed the d
 By default, the arcane catalyst can store 50 souls. However, hyper enchanting requires more than 50 souls.
 You can stabilize the arcane catalyst using enderic lasers. Each laser increases the number of souls that can be stored.
 However, the consequences can be catastrophic if stabilization is lost while souls are stored.
+
+
+<center>
+<ModAsset location="oritech:area/catalyst_stabilized" width={640} />
+</center>
