--- a/docs/logistics/item_transport.mdx
+++ b/docs/logistics/item_transport.mdx
@@ -5,22 +5,34 @@ icon: oritech:item_filter_block
 
 Oritech includes item transport pipes and item filter blocks to meet your item logistics needs. Item pipes connect to each other and all neighboring inventories.
 
-Unlike other pipes, item pipes do not have an inventory. This means that other blocks, such as hoppers, cannot insert items into the pipe network on their own. Instead, an item pipe can be set to extract from a nearby inventory. To do this, simply right-click a pipe block connected to something. If you have multiple inventories connected to the same pipe block, you'll notice that all connections turn to extraction mode. This is a current limitation of Oritech pipes. If you set a pipe block to extract, it will try to extract from all blocks connected to this pipe block. To actually transport anything, the pipe network must consist of at least two blocks.
+Unlike other pipes, item pipes do not have an inventory. This means that other blocks, such as hoppers, cannot insert items
+into the pipe network on their own. Instead, an item pipe can be set to extract from a nearby inventory.
+To do this, simply right-click a pipe block connected to something.
+If you have multiple inventories connected to the same pipe block, you'll notice that all connections turn to extraction mode.
+This is a current limitation of Oritech pipes. If you set a pipe block to extract, it will try to extract from all blocks connected to this pipe block.
+To actually transport anything, the pipe network must consist of at least two blocks.
 
 Extracted items will be placed into the **closest** available inventory further down the network.
 
-The maximum transfer range is 64 blocks. Any network longer than that needs to be split.
+The maximum transfer range is 256 blocks. Any network longer than that needs to be split.
 
-Pipes will always extract from the first non-empty slot in an inventory. If the item cannot be placed into an inventory within the pipe network, it will block the pipe from extracting from that inventory.
+Pipes will always extract from the first non-empty slot in an inventory.
+If the item cannot be placed into an inventory within the pipe network, it will block the pipe from extracting from that inventory.
+
+<center>
+<ModAsset location="oritech:area/item_pipes" width={512} />
+</center>
 
 ---
 
 **Item Filters**
 
-<center>
-<ModAsset location="oritech:item_filter_block" width={256} />
-</center>
-
-To filter which items go where, you can use item filters. They are blocks you can place next to the target inventory. They have five input sides and always output to the side they are facing. They only accept items that match the filter set via the UI and automatically output them to the target inventory.
+To filter which items go where, you can use item filters. They are blocks you can place next to the target inventory.
+They have five input sides and always output to the side they are facing.
+They only accept items that match the filter set via the UI and automatically output them to the target inventory.
 
 However, they will not automatically extract items from neighboring inventories.
+
+<center>
+<ModAsset location="oritech:area/item_filters" width={512} />
+</center>
