Add tachyon collector config / tooltips / recipes

--- a/common/src/main/resources/assets/oritech/lang/en_us.json
+++ b/common/src/main/resources/assets/oritech/lang/en_us.json
@@ -66,6 +66,7 @@
   "tooltip.oritech.needs_laser_power": "Must be powered via an enderic laser",
   "tooltip.oritech.steam_engine": "Processes steam into RF and water. Can be chained together",
   "tooltip.oritech.item_filter": "Used to filter which items can be inserted into an inventory.",
+  "tooltip.oritech.particle_collector": "Collects the energy of tachyons emitted by particle collisions.",
   "button.oritech.item_filter.whitelist": "Whitelist",
   "title.oritech.item_filter.whitelist": "Whitelist",
   "tooltip.oritech.item_filter.whitelist": "Currently only allows items through which \nmatch the listed items",
@@ -292,6 +293,7 @@
   "block.oritech.fragment_forge_block": "Fragment Forge",
   "block.oritech.assembler_block": "Assembler",
   "block.oritech.foundry_block": "Foundry",
+  "block.oritech.particle_collector_block": "Tachyon Absorber",
   "block.oritech.centrifuge_block": "Centrifuge",
   "block.oritech.atomic_forge_block": "Atomic Forge",
   "block.oritech.bio_generator_block": "Bio Generator",
@@ -766,6 +768,9 @@
   "text.config.oritech-config.option.endPortalRequiredSpeed": "Minimum End Portal Collision Energy",
   "text.config.oritech-config.option.netherPortalRequiredSpeed": "Minimum Nether Portal Collision Energy",
   "text.config.oritech-config.option.blackHoleRequiredSpeed": "Minimum Black Hole Collision Energy",
+  "text.config.oritech-config.option.collectorEnergyStorage": "Tachyon Collector Energy Capacity",
+  "text.config.oritech-config.option.blackHoleTachyonEnergy": "Energy of Tachyons from Black Holes",
+  "text.config.oritech-config.option.tachyonCollisionEnergyFactor": "Particle Collision Tachyon RF Multiplier",
   "text.config.oritech-config.section.blackHole": "Black Hole",
   "text.config.oritech-config.option.pullTimeMultiplier": "Black Hole Pull Time Multiplier",
   "text.config.oritech-config.option.pullRange": "Black Hole Pull Range",
