--- a/src/main/resources/assets/oritech/lang/pl_pl.json
+++ b/src/main/resources/assets/oritech/lang/pl_pl.json
@@ -19,8 +19,8 @@
   "advancements.oritech.exo_chest.description": "Wykonaj napierśnik Exo i chroń swoje wnętrze. Iron Man, kto to?",
   "advancements.oritech.exo_helmet": "Przewaga na starcie",
   "advancements.oritech.exo_helmet.description": "Wykonaj hełm Exo i wyprzedź innych w grze. Umysł nad materią!",
-  "advancements.oritech.drill": "Sierżant wiertarka",
-  "advancements.oritech.drill.description": "Zdobądź ręczną wiertarkę i zacznij wiercić w ziemi. Kop głęboko, żołnierzu!",
+  "advancements.oritech.drill": "Sierżant drilowiec",
+  "advancements.oritech.drill.description": "Zdobądź ręczne wiertło i zacznij wiercić w ziemi. Kop głęboko, żołnierzu!",
   "advancements.oritech.resource_node": "Błyszczące nagrody",
   "advancements.oritech.resource_node.description": "Znajdź węzeł zasobów. Nieskończone bogactwo czeka!",
   "advancements.oritech.centrifuge": "Doktor kręcący",
@@ -490,7 +490,7 @@
   "item.oritech.exo_leggings": "Legginsy Egzo",
   "item.oritech.exo_boots": "Buty Egzo",
   "item.oritech.chainsaw": "Piła Łańcuchowa",
-  "item.oritech.hand_drill": "Wiertarka Ręczna",
+  "item.oritech.hand_drill": "Wiertło Ręczna",
   "item.oritech.jetpack": "Plecak Odrzutowy",
   "item.oritech.exo_jetpack": "Plecak Odrzutowy Egzo",
   "item.oritech.jetpack_elytra": "Wzmocniona Elytra",
@@ -680,7 +680,7 @@
   "text.config.oritech-config.category.elytraJetpack": "Plecak Odrzutowy Elytra",
   "text.config.oritech-config.category.exoElytraJetpack": "Plecak Odrzutowy Exo Elytra",
   "text.config.oritech-config.category.exoChestplate": "Zbroja Exo",
-  "text.config.oritech-config.category.basicDrill": "Podstawowy Wiertło",
+  "text.config.oritech-config.category.basicDrill": "Podstawowe Wiertło",
   "text.config.oritech-config.category.chainSaw": "Piła Łańcuchowa",
   "text.config.oritech-config.option.charger.energyCapacity": "Pojemność Energetyczna Ładowarki",
   "text.config.oritech-config.option.charger.maxEnergyInsertion": "Maksymalne Wstawianie Energii Ładowarki",
@@ -750,4 +750,36 @@
   "text.config.oritech-config.option.pullTimeMultiplier": "Mnożnik Czasu Przyciągania Czarnej Dziury",
   "text.config.oritech-config.option.pullRange": "Zasięg Przyciągania Czarnej Dziury",
   "text.config.oritech-config.option.idleWaitTicks": "Czasy Oczekiwania Czarnej Dziury",
+  "text.config.oritech-config.option.blackHoleTachyonEnergy": "Energia tachionów z czarnych dziur",
+
+  "block.oritech.fluxite_block": "Blok Fluxitu",
+  "block.oritech.electrum_block": "Blok Elektrumu",
+  "fluid.oritech.still_fuel": "Turbopaliwo",
+  "block.oritech.raw_platinum_block": "Blok Surowej Platyny",
+  "block.oritech.still_fuel_block": "Turbopaliwo",
+  "block.oritech.still_steam_block": "Para",
+  "item.oritech.still_oil_bucket": "Wiadro Surowej Ropy",
+  "text.config.oritech-config.option.tachyonCollisionEnergyFactor": "Mnożnik RF Kolizji Cząstek Tachionów",
+  "text.config.oritech-config.option.processingMachines.pulverizerData.energyPerTick": "Energia na Tik",
+  "text.config.oritech-config.option.collectorEnergyStorage": "Pojemność Energii Kolektora Tachionów",
+  "tooltip.oritech.pipe_booster": "Zwiększa prędkość ekstrakcji płynów lub przedmiotów w rurze za nim",
+  "item.oritech.still_steam_bucket": "Wiadro z Parą",
+  "block.oritech.raw_nickel_block": "Blok Surowego Niklu",
+  "block.oritech.steel_block": "Blok Stali",
+  "block.oritech.particle_collector_block": "Absorber Tachionów",
+  "block.oritech.silicon_block": "Blok Krzemu",
+  "fluid.oritech.still_steam": "Para",
+  "block.oritech.nickel_block": "Blok Niklu",
+  "block.oritech.plastic_block": "Blok Plastiku",
+  "block.oritech.energite_block": "Blok Energitu",
+  "block.oritech.platinum_block": "Blok Platyny",
+  "block.oritech.biosteel_block": "Blok Biostali",
+  "block.oritech.duratium_block": "Blok Duratium",
+  "block.oritech.still_oil_block": "Surowa Ropa",
+  "item.oritech.still_fuel_bucket": "Wiadro z Turbopaliwem",
+  "block.oritech.biomass_block": "Blok Biomasy",
+  "block.oritech.pipe_booster_block": "Wzmacniacz Rur",
+  "fluid.oritech.still_oil": "Ropa",
+  "block.oritech.adamant_block": "Blok Adamantu",
+  "tooltip.oritech.particle_collector": "Zbiera energię tachionów emitowaną przez kolizje cząstek."
 }
